# game-of-life

./: CMakeLists.txt  game_app.cpp  game_app.h  game_app_window.cpp  game_app_window.h  game_area.cpp  game_area.h  main.cpp
